@@ -1,12 +1,8 @@
 package controller;
 
 import javafx.fxml.FXML;
-import javafx.fxml.Initializable;
 import javafx.scene.web.WebEngine;
 import javafx.scene.web.WebView;
-
-import java.net.URL;
-import java.util.ResourceBundle;
 
 public class JavadocController {
 	@FXML
@@ -19,7 +15,6 @@ public class JavadocController {
 		loadPage();
 	}
 
-	// TODO: Para que funcione, hay que añadir --add-modules javafx.web en el VM arguments
 	public void loadPage() {
 		engine.load("docs/index.html");
 	}
